--- a/V3/style.css
+++ b/V3/style.css
@@ -2,3 +2,28 @@
 	margin-top: 2%;
 	margin-bottom: 2%;
 }
+
+#settings, #infos_page{
+	width: 48%;
+}
+
+#settings{
+	float: left;
+}
+
+#infos_page{
+	float: right;
+}
+
+label{
+	padding-top: 3%;	
+}
+
+#edit_parent{
+	margin-left: 10%;
+}
+
+#parent{
+	margin-top: 3%;
+}
+
